make sure about and content section headers are aligned with each other

--- a/app/styles/includes/_base.scss
+++ b/app/styles/includes/_base.scss
@@ -61,6 +61,14 @@ h1, h2, h3, h4, h5 {
   border-left: 2px solid $gray;
 }
 
+.about, .content {
+  h2, h3 {
+    font-size: 2.3em;
+    min-height: 2.3em;
+    margin-top: 1em;
+  }
+}
+
 
 @media (min-width: $screen-md-min) {
   .about {
